aku udah ngedit di bagian nama budi santoso

--- a/Profil_Budi.html
+++ b/Profil_Budi.html
@@ -11,7 +11,7 @@
     <table border="1" cellspacing ="0">
         <tr>
             <th> Nama </th>
-            <td> Budi Santoso</td>
+            <td> Majlista Aurellia Putri</td>
         </tr>
         <tr>
             <th> NIM</th>
