--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </nav>
 
-    <main class="main-wrapper">
+    <main class="main-pengenalan">
             <div class="main"></div>
             <div class="text">
                 <h1>Galeri Kesenian</h1>
@@ -34,7 +34,7 @@
                 antara tradisi dan modernitas, antara lokal dan global.<br>
                 Melalui kesenian, kita menemukan siapa kita sebenarnya.</p>
             </div>
-            <section class="cards-container">
+            <section class="seluruh-card">
               <div class="card">
                 <div class="header"><img src="sendratari.jpg" alt="Sendratari"></div>
               </div>
