--- a/kontak.html
+++ b/kontak.html
@@ -21,7 +21,7 @@
     </nav>
 
     <header>Kontak Kami</header>
-
+    <main>
     <section class="kontak" id="kontak">
 
         <div class="row">
@@ -34,7 +34,7 @@
             </form>
         </div>
     </section>
-
+    </main>
     
     <footer>&copy; 2025 Pemrograman Web. All Rights Reserved.</footer>
 </body>
